samples/_failures_safe/1761286541_32d3d0_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_eb900257.c: In function ‘main’:
./samples/SAFE/__tmp_eb900257.c:120:33: error: expected ‘]’ at end of input
  120 |     char input[MAX_INPUT_LEN + 1
      |                                 ^
      |                                 ]
./samples/SAFE/__tmp_eb900257.c:120:5: error: expected declaration or statement at end of input
  120 |     char input[MAX_INPUT_LEN + 1
      |     ^~~~
